# paravita

./: .gitignore  Cargo.toml  README.md
kernel/: Cargo.toml
kernel/src/: main.rs
paravita/: Cargo.toml
paravita/src/: lib.rs
paravita/src/vm/: atoms.rs  error.rs  mod.rs  object.rs  opcodes.rs  value.rs
