[package]
name = "paravita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
anyhow = { version = "1.0.76", default-features = false }
async-lock = { version = "3.2.0", default-features = false }
bytemuck = { version = "1.14.0", features = ["min_const_generics", "nightly_docs", "bytemuck_derive"] }
bytemuck_derive = "1.5.0"
fnv = { version = "1.0.7", default-features = false }
indexmap = { version = "2.1.0", default-features = false }
num = { version = "0.4.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "race"] }
portable-atomic = "1.6.0"
rand = { version = "0.8.5", default-features = false, features = ["alloc", "min_const_gen", "small_rng"] }
tinyvec = { version = "1.6.0", features = ["alloc", "rustc_1_57"] }
